--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.309.0",
+    "@aws-sdk/dynamo-db": "^3.309.0",
     "@types/aws-lambda": "^8.10.114",
     "aws-cdk-lib": "2.73.0",
     "aws-lambda": "^1.0.7",
