--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.321.1",
     "@aws-sdk/client-ses": "^3.309.0",
-    "@aws-sdk/dynamo-db": "^3.309.0",
     "@types/aws-lambda": "^8.10.114",
     "aws-cdk-lib": "2.73.0",
     "aws-lambda": "^1.0.7",
