--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^1.0.0-rc.12",
     "constructs": "^10.0.0",
     "esbuild": "^0.17.16",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
   }
 }
